[package]
name = "tokio_postgres_large_object"
version = "0.7.1"
authors = ["Steven Fackler <sfackler@gmail.com>", "Vaqxai <vaqxai@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Large object support for rust-postgres"
repository = "https://github.com/sfackler/rust-postgres-large-object"
readme = "README.md"
keywords = ["database", "sql", "postgres"]
edition = "2024"

[dependencies]
tokio-postgres = "0.7.13"
tokio = { version = "1", features = ["macros", "rt"] }
